--- a/styles.css
+++ b/styles.css
@@ -94,13 +94,15 @@ a {
   align-items: center;
   color: #eee;
   position: relative;
-  border-bottom: 5px black solid;
   background-color: #222;
 }
 .header__logo {
   text-align: center;
   border-bottom: none;
   text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #000;
   height: 100%;
   font-size: 1.8rem;
@@ -231,7 +233,7 @@ li::before {
 .hamburger__bar1, .hamburger__bar2, .hamburger__bar3 {
   width: 35px;
   height: 5px;
-  background-color: white;
+  background-color: rgb(0, 101, 0);
   font-weight: bold;
   margin: 6px 0;
   transition: 0.4s;
@@ -251,7 +253,7 @@ li::before {
 
 @media only screen and (max-width: 30rem) {
   .header {
-    height: 6.5rem;
+    height: 7rem;
   }
   .header__nav {
     display: none;
